[package]
name = "query-perf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
drasi-query-ast = { path = "../drasi-query-ast" }
drasi-query-core = { path = "../drasi-query-core" }
drasi-query-cypher = { path = "../drasi-query-cypher" }
drasi-query-index-garnet = { path = "../drasi-query-index-garnet" }
drasi-query-index-rocksdb = { path = "../drasi-query-index-rocksdb" }
serde = "1.0.163"
serde_json = "1.0.96"
rand = "0.8.5"
rand_pcg = "0.3.1"
tokio = { version = "1.30.0", features = ["full"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
clap = { version = "4.3.21", features = ["derive"] }
generational-arena = "0.2.9"

