[package]
name = "query-perf"
version = "0.2.3"
edition.workspace = true
publish = false

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
drasi-query-ast.workspace = true
drasi-core.workspace = true
drasi-query-cypher.workspace = true
drasi-functions-cypher.workspace = true
drasi-index-garnet.workspace = true
drasi-index-rocksdb.workspace = true
serde = "1.0.163"
serde_json = "1.0.96"
rand = "0.8.5"
rand_pcg = "0.3.1"
tokio = { version = "1.30.0", features = ["full"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
clap = { version = "4.3.21", features = ["derive"] }
generational-arena = "0.2.9"

