# Copyright 2025 The Drasi Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "drasi-server-core"
version = "0.1.0"
edition = "2021"
authors = ["Drasi Project"]
description = "Drasi Server Core"
license = "Apache-2.0"
repository = "https://github.com/drasi-project/drasi-core"
keywords = ["drasi"]
categories = ["database"]
readme = "README.md"

[lib]
name = "drasi_server_core"
path = "src/lib.rs"

[dependencies]
drasi-core = { path = "../core" }
drasi-functions-cypher = { path = "../functions-cypher" }
drasi-functions-gql = { path = "../functions-gql" }
drasi-query-ast = { path = "../query-ast" }
drasi-query-cypher = { path = "../query-cypher" }
drasi-query-gql = { path = "../query-gql" }
drasi-index-rocksdb = { path = "../index-rocksdb" }
drasi-index-garnet = { path = "../index-garnet" }
drasi-middleware = { path = "../middleware" }

tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
thiserror = "2.0"
log = "0.4"
env_logger = "0.10"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
rand = "0.8"
ordered-float = "3.7"
csv = "1.3"

# PostgreSQL support
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1"] }
postgres-types = { version = "0.2", features = ["derive", "with-chrono-0_4"] }
postgres-protocol = "0.6"
bytes = "1.0"
byteorder = "1.5"
deadpool-postgres = "0.13"
rust_decimal = { version = "1.32", features = ["db-tokio-postgres"] }
regex = "1.10"
handlebars = "5.1"
reqwest = { version = "0.11", features = ["json", "stream"] }
futures = "0.3"
base64 = "0.22"
sha2 = "0.10"
hmac = "0.12"
pbkdf2 = "0.12"

# gRPC support
tonic = "0.11"
prost = "0.12"
prost-types = "0.12"
tokio-stream = { version = "0.1", features = ["sync"] }

# Redis support for platform source
redis = { version = "0.24", features = ["tokio-comp", "streams"] }

[build-dependencies]
tonic-build = "0.11"

[dev-dependencies]
# Testing utilities
tempfile = "3.8"
mockall = "0.12"
tokio-test = "0.4"
assert_matches = "1.5"
serial_test = "3.0"
pretty_assertions = "1.4"
test-case = "3.3"
wiremock = "=0.6.2"

# Additional testing dependencies
futures = "0.3"
tower = { version = "0.4", features = ["util"] }
hyper = { version = "1.0", features = ["full"] }
rstest = "0.18"

# Integration testing with testcontainers
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["redis"] }