[package]
name = "shared-tests"
version = "0.1.0"
publish = false
edition = "2021"

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
drasi-query-ast = { path = "../query-ast" }
drasi-core = { path = "../core" }
drasi-query-cypher = { path = "../query-cypher" }
drasi-functions-cypher = { path = "../functions-cypher" }
drasi-middleware = { path = "../middleware" }
serde = "1.0.163"
serde_json = "1.0.96"
async-trait = "0.1.68"
tokio = { version = "1.6", features = ["full"] }
env_logger = "0.10.0"
log = "0.4"
futures = "0.3.28"
chrono = "0.4.31"
base64 = "0.22.0"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }

# Redis testing utilities
redis = { version = "0.27", features = ["tokio-comp"] }
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["redis", "mssql_server"] }

# MSSQL testing utilities
tiberius = { version = "0.12", default-features = false, features = ["sql-browser-tokio", "rustls"] }
tokio-util = { version = "0.7", features = ["compat"] }
serial_test = "3.0"
