[package]
name = "shared-tests"
version = "0.2.3"
publish = false
edition.workspace = true

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
drasi-query-ast.workspace = true
drasi-core.workspace = true
drasi-query-cypher.workspace = true
drasi-functions-cypher.workspace = true
drasi-middleware.workspace = true
serde = "1.0.163"
serde_json = "1.0.96"
async-trait = "0.1.68"
tokio = { version = "1.6", features = ["full"] }
env_logger = "0.10.0"
log = "0.4"
futures = "0.3.28"
chrono = "0.4.31"
base64 = "0.22.0"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }

# Redis testing utilities
redis = { version = "0.27", features = ["tokio-comp"] }
testcontainers = "0.26.3"
testcontainers-modules = { version = "0.14", features = ["redis" ] }
# For test utilities that need to create test sources/queries
drasi-lib.workspace = true

[dev-dependencies]
serial_test = "3.0"
