# Copyright 2025 The Drasi Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "drasi-batching-common"
version = "0.1.0"
edition = "2021"
authors = ["Drasi Project"]
description = "Shared adaptive batching primitives for Drasi sources"
license = "Apache-2.0"
repository = "https://github.com/drasi-project/drasi-core"
keywords = ["drasi", "plugin", "batching"]
categories = ["network-programming"]

[lints]
workspace = true

[dependencies]
log = "0.4"
tokio = { version = "1.0", features = ["sync", "time", "macros", "rt"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
