[package]
name = "drasi-host-sdk"
version = "0.1.0"
edition = "2021"
description = "Host-side SDK for loading and interacting with Drasi cdylib plugins"
license = "Apache-2.0"

[features]
default = []
registry = ["oci-client", "semver", "tokio/fs"]

[dependencies]
drasi-ffi-primitives = { workspace = true }
drasi-lib = { workspace = true }
drasi-core = { workspace = true }
drasi-plugin-sdk = { workspace = true }
libloading = "0.8"
async-trait = "0.1"
anyhow = "1.0"
tokio = { version = "1", features = ["rt", "sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
chrono = "0.4"

# Optional: OCI registry support
oci-client = { version = "0.16", optional = true }
semver = { version = "1.0", optional = true }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
