# Copyright 2026 The Drasi Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "drasi-kubernetes-common"
version = "0.1.0"
edition = "2021"
authors = ["Drasi Project"]
description = "Shared types for Kubernetes source and bootstrap plugins"
license = "Apache-2.0"
repository = "https://github.com/drasi-project/drasi-core"
keywords = ["drasi", "kubernetes", "common"]
categories = ["database"]

[lints]
workspace = true

[dependencies]
drasi-core.workspace = true
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
kube = { version = "0.98", features = ["client", "runtime", "derive"] }
k8s-openapi = { version = "0.24", features = ["v1_32"] }
log = "0.4"
