# Copyright 2025 The Drasi Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "drasi-mssql-common"
version = "0.1.0"
edition = "2021"
authors = ["Drasi Project"]
description = "Shared types for MS SQL source and bootstrap plugins"
license = "Apache-2.0"
repository = "https://github.com/drasi-project/drasi-core"
keywords = ["drasi", "mssql", "common"]
categories = ["database"]

[lints]
workspace = true

[dependencies]
drasi-core.workspace = true
tiberius = { version = "0.12", features = ["chrono", "rust_decimal"] }
tokio = { version = "1.0", features = ["net"] }
tokio-util = { version = "0.7", features = ["compat"] }
anyhow = "1.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
rust_decimal = "1.34"
ordered-float = "3.7.0"
hex = "0.4"

[dev-dependencies]
serde_json = "1.0"
