[package]
name = "drasi-plugin-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared runtime dylib for Drasi dynamic plugin loading. Contains all shared dependencies (tokio, serde, drasi-lib, etc.) in a single dynamic library to ensure consistent symbol hashes between the server and plugins."

[lib]
crate-type = ["lib", "dylib"]

[dependencies]
# All versions pinned with = to prevent plugins from accidentally pulling different versions.
# Plugins should only access these via runtime re-exports, never as direct dependencies.
# Update process: bump the pin here and rebuild everything.
tokio = { version = "=1.44.1", features = ["full"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
anyhow = "=1.0.101"
thiserror = "=2.0.18"
async-trait = "=0.1.89"
utoipa = { version = "=4.2.3", features = ["chrono"] }
drasi-lib = { workspace = true }
log = { version = "=0.4.29", features = ["std"] }
chrono = { version = "=0.4.43", features = ["serde"] }
uuid = { version = "=1.20.0", features = ["v4", "serde"] }
futures = "=0.3.31"
ordered-float = "=3.9.2"
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.22", features = ["env-filter", "fmt"] }
tracing-log = "=0.2.0"

[lints]
workspace = true
