[package]
name = "drasi-plugin-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SDK for building Drasi plugins (sources, reactions, bootstrappers)"
readme = "README.md"

[dependencies]
drasi-lib = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
utoipa = { version = "4", features = ["chrono"] }
async-trait = "0.1"
anyhow = "1.0"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }

[lints]
workspace = true
