[package]
name = "drasi-plugin-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SDK for building Drasi plugins (sources, reactions, bootstrappers)"
readme = "README.md"

[dependencies]
drasi-ffi-primitives = { workspace = true }
drasi-lib = { workspace = true }
drasi-core = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
utoipa = { version = "4", features = ["chrono"] }
async-trait = "0.1"
anyhow = "1.0"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync"] }
log = "0.4"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry"] }
tracing-log = "0.2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }

[lints]
workspace = true
