[package]
name = "plugin-demo"
version = "0.1.0"
edition = "2021"
description = "Examples demonstrating the instance-based plugin architecture for drasi-lib"

[[bin]]
name = "minimal"
path = "src/minimal.rs"

[[bin]]
name = "full"
path = "src/full.rs"

[[bin]]
name = "selective"
path = "src/selective.rs"

[dependencies]
# Core library
drasi-lib = { path = "../../lib" }

# Source plugins - these are always available (no features needed for basic demo)
drasi-source-mock = { path = "../../components/sources/mock" }

# Reaction plugins
drasi-reaction-log = { path = "../../components/reactions/log" }

# Optional source plugins (for selective/full examples)
drasi-source-postgres = { path = "../../components/sources/postgres", optional = true }
drasi-source-http = { path = "../../components/sources/http", optional = true }
drasi-source-grpc = { path = "../../components/sources/grpc", optional = true }
drasi-source-platform = { path = "../../components/sources/platform", optional = true }
drasi-source-application = { path = "../../components/sources/application", optional = true }

# Optional reaction plugins
drasi-reaction-http = { path = "../../components/reactions/http", optional = true }
drasi-reaction-http-adaptive = { path = "../../components/reactions/http-adaptive", optional = true }
drasi-reaction-grpc = { path = "../../components/reactions/grpc", optional = true }
drasi-reaction-grpc-adaptive = { path = "../../components/reactions/grpc-adaptive", optional = true }
drasi-reaction-sse = { path = "../../components/reactions/sse", optional = true }
drasi-reaction-platform = { path = "../../components/reactions/platform", optional = true }
drasi-reaction-profiler = { path = "../../components/reactions/profiler", optional = true }
drasi-reaction-application = { path = "../../components/reactions/application", optional = true }

# Bootstrap plugins
drasi-plugin-postgres-bootstrap = { path = "../../components/bootstrappers/plugin-postgres", optional = true }
drasi-plugin-platform-bootstrap = { path = "../../components/bootstrappers/plugin-platform", optional = true }
drasi-plugin-scriptfile-bootstrap = { path = "../../components/bootstrappers/plugin-scriptfile", optional = true }
drasi-plugin-application-bootstrap = { path = "../../components/bootstrappers/plugin-application", optional = true }
drasi-plugin-noop-bootstrap = { path = "../../components/bootstrappers/plugin-noop", optional = true }

# Async runtime and utilities
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
env_logger = "0.10"
serde_json = "1.0"

[features]
default = []
full = [
    "drasi-source-postgres", "drasi-source-http", "drasi-source-grpc",
    "drasi-source-platform", "drasi-source-application",
    "drasi-reaction-http", "drasi-reaction-http-adaptive",
    "drasi-reaction-grpc", "drasi-reaction-grpc-adaptive",
    "drasi-reaction-sse", "drasi-reaction-platform",
    "drasi-reaction-profiler", "drasi-reaction-application",
    "drasi-plugin-postgres-bootstrap", "drasi-plugin-platform-bootstrap",
    "drasi-plugin-scriptfile-bootstrap", "drasi-plugin-application-bootstrap",
    "drasi-plugin-noop-bootstrap"
]
selective = ["drasi-source-postgres", "drasi-reaction-http", "drasi-plugin-scriptfile-bootstrap"]