[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2021"

# If you copy one of the examples into a new project, you should be using
# [dependencies] instead, and delete the **path**.
[dev-dependencies]
drasi-query-ast = { path = "../../query-ast" }
drasi-core = { path = "../../core" }
drasi-query-cypher = { path = "../../query-cypher" }
drasi-functions-cypher = { path = "../../functions-cypher" }
drasi-middleware = { path = "../../middleware" }
serde = "1.0.163"
serde_json = "1.0.96"
async-trait = "0.1.68"
tokio = { version = "1.6", features = ["full"] }
env_logger = "0.10.0"
log = "0.4"
futures = "0.3.28"
chrono = "0.4.31"
rand = "0.8.5"
sysinfo = "0.30.12"
anyhow = "1.0"



[[example]]
name = "vehicles"
path = "vehicles.rs"

[[example]]
name = "temperature"
path = "temperature.rs"

[[example]]
name = "process_monitor"
path = "process_monitor.rs"

