[workspace]

[package]
name = "kubernetes-poc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "poc"
path = "src/main.rs"

[dependencies]
kube = { version = "0.98", features = ["client", "runtime", "derive"] }
k8s-openapi = { version = "0.24", features = ["v1_32"] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
anyhow = "1.0"
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
