[package]
name = "neo4j-poc"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
neo4rs = "0.8"
tokio = { version = "1", features = ["full"] }
serde_json = "1"

[lints]
workspace = true
